@@ -28,10 +28,10 @@ class RecentLocationsDataFileTest
     final List<Location> locations = new ArrayList<>();
     for (int i = 0; i < 10; i++)
     {
-      locations.add(LocationsListParser.parseLocation(String.format("City%d;US;America/New_York;+420%d-0710%d/",
-                                                                    i,
-                                                                    i,
-                                                                    i)));
+      locations.add(LocationsListParser.parseLocation("City%d;US;America/New_York;+420%d-0710%d/".formatted(
+        i,
+        i,
+        i)));
     }
     for (final Location location: locations)
     {
